# computer-club

./: .clang-format  CMakeLists.txt  README.md  launch.sh
lib/: CMakeLists.txt  computer_club.cpp  computer_club.hpp  exceptions.hpp
lib/client/: client.cpp  client.hpp
lib/place/: place.cpp  place.hpp
lib/time_format/: time_format.cpp  time_format.hpp
tests/: CMakeLists.txt  computer_club_test.cpp
tests/static/: input1.txt
